--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <body>
         <h1>Hello World</h1>
+        <img src="" alt="An image I plan to uplaod but this is more descriptive for accessibility.">
+        <a href="www.twitter.com"> this links to twitter :)</a>
         <p><h3>nyles.net because nyles.com was taken.</h3></p>
     </body>
 </html>
