--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
+    <link rel="stylesheet" type="text/css" href="color.css">
+    <title>nyles dot net</title>
     <body>
         <h1>Hello World</h1>
-        <img src="" alt="An image I plan to uplaod but this is more descriptive for accessibility.">
-        <a href="www.twitter.com"> this links to twitter :)</a>
-        <p><h3>nyles.net because nyles.com was taken.</h3></p>
+        <p><h3>nyles.net because <a href="nyles.com">nyles.com</a> was taken.</h3></p>
+        <img src="" alt="You're seeing this because the image failed to load. Well there is no image to load at the moment.">
     </body>
 </html>
