--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>nyles dot net</title>
     <body>
         <h1>Hello World</h1>
-        <p><h3>nyles.net because <a href="nyles.com">nyles.com</a> was taken.</h3></p>
+        <p><h3>nyles.net because <a href="nyles.com.html">nyles.com</a> was taken.</h3></p>
         <img src="" alt="You're seeing this because the image failed to load. Well there is no image to load at the moment.">
     </body>
 </html>
