--- a/nyles.com.html
+++ b/nyles.com.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
 <html>
-<h1>no free clout</h1>
+    <head>
+        <title>nyles.com doesn't exist in my books</title>
+    </head>
+    <body><h1>no free clout</h1></body>
 </html>
