--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <link rel="stylesheet" type="text/css" href="color.css">
     <title>nyles dot net</title>
     <body>
-        <h1>Hello World</h1>
+        <h1>NylesDotNet</h1>
         <p><h3>nyles.net because <a href="nyles.com.html">nyles.com</a> was taken.</h3></p>
         <img src="" alt="You're seeing this because the image failed to load. Well there is no image to load at the moment.">
     </body>
