Added picture + form
Testing out picture + form 06/30 update.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,42 @@
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" type="text/css" href="color.css">
-    <title>nyles dot net</title>
+    <head>
+        <link rel="stylesheet" type="text/css" href="color.css">
+        <title>nyles dot net</title>
+    </head>
     <body>
         <h1>NylesDotNet</h1>
+        <div>
+            <img class="picture" src="https://previews.dropbox.com/p/thumb/AA2rWZW6AqUNiRvkbSHhrY3-iLwAikCloZYqoeN8CtsC_9sB7B6nSSdphWZpuSMujeJSddlc0IDCRt1KOp14UeHKwXumTn24pUW-dZFczhe4EjsS8WUFmzMvLUEXzF9DB8L-3i5bZRRJVm688P8NyY1uQZ4GcIg6pdG1yxNcs1Lac4wsSzTAqGmV9JOmIOmbFe5Yos4gB4X44s-kZub8Pdy2z0hNmXA_RhAU_uUulBrtL8M4LyCzCFU5J8-OQwP5AwmoL-4xSZu93ypDSJ1u-utvPgajXJ6ul6cTHpiIuJ_w8mx0i2Z5hadDA3B0C0kP69K71aw8fUI0FCXYg3LoHaDufzkl-5Kug8EpvUKHqBeNTA/p.png?fv_content=true&size_mode=5" alt="You're seeing this because the image failed to load. Well there is no image to load at the moment.">
+        </div>
+        <div class="headers">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Things</a></li>
+                <li><a href="#">Art</a></li>
+                <li><a href="#">Music</a></li>
+                <li><a href="#">About</a></li>
+            <ul>
+        </div>
         <p><h3>nyles.net because <a href="nyles.com.html">nyles.com</a> was taken.</h3></p>
-        <img src="" alt="You're seeing this because the image failed to load. Well there is no image to load at the moment.">
+<!-- Paragraph that asks the user if they know me asks them to fill in yes or no and then their name-->
+        <p>
+            Do you know me personally?
+            <form action="/submit-your-name">
+                <label>
+                    <input value="Yes" type="radio" name="Know">
+                    Yes
+                </label>
+            </br>
+                <label>
+                    <input value="No" type="radio" name="Know">
+                    No
+                </label>
+            </br>
+                <input type="text" required placeholder="Type your name here">
+            <button type="submit">Submit </button>
+            </form>
+        </p>
+<!-- Paragraph that asks the user if they know me asks them to fill in yes or no and then their name-->
     </body>
 </html>
