--- a/nyles.com.html
+++ b/nyles.com.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" type="text/css" href="color.css">
         <title>nyles.com doesn't exist in my books</title>
     </head>
     <body><h1>no free clout</h1></body>
