--- a/work-in-progress.html
+++ b/work-in-progress.html
@@ -4,5 +4,17 @@
         <link rel="stylesheet" type="text/css" href="color.css">
         <title>Work in Progress Page</title>
     </head>
-    <body><h1>You're a bit early to the party, check back later when I've updated this page.</h1></body>
+    <body>
+        <h1>You're a bit early to the party, check back later when I've updated this page.</h1>
+        <div class="headers">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="/work-in-progress.html">Things</a></li>
+                <li><a href="/art.html">Art</a></li>
+                <li><a href="/work-in-progress.html">Music</a></li>
+                <li><a href="/work-in-progress.html">About</a></li>
+                <li><a href="https://twitter.com/nylescs">Twitter</a></li>
+            <ul>
+        </div>
+    </body>
 </html>
