--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <div class="head-picture">
                     <img class="picture" src="https://previews.dropbox.com/p/thumb/AA2rWZW6AqUNiRvkbSHhrY3-iLwAikCloZYqoeN8CtsC_9sB7B6nSSdphWZpuSMujeJSddlc0IDCRt1KOp14UeHKwXumTn24pUW-dZFczhe4EjsS8WUFmzMvLUEXzF9DB8L-3i5bZRRJVm688P8NyY1uQZ4GcIg6pdG1yxNcs1Lac4wsSzTAqGmV9JOmIOmbFe5Yos4gB4X44s-kZub8Pdy2z0hNmXA_RhAU_uUulBrtL8M4LyCzCFU5J8-OQwP5AwmoL-4xSZu93ypDSJ1u-utvPgajXJ6ul6cTHpiIuJ_w8mx0i2Z5hadDA3B0C0kP69K71aw8fUI0FCXYg3LoHaDufzkl-5Kug8EpvUKHqBeNTA/p.png?fv_content=true&size_mode=5" alt="2D Drawing of me, a black kid with a large afro wearing a red sweater.">
                 </div>
-                <h1>NylesDotNet</h1>
+                <h1>NylesDotNet (now with art)</h1>
             </div>
             <h3 id ="quote-of-the-day">"Was the color orange named after the fruit or was the fruit named after the color?"</h3>
         </div>   
@@ -20,9 +20,9 @@
         <p><h3>nyles.net because <a href="nyles.com.html">nyles.com</a> was taken.</h3></p>
         <div class="headers">
             <ul>
-                <li><a href="/work-in-progress.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="/work-in-progress.html">Things</a></li>
-                <li><a href="/work-in-progress.html">Art</a></li>
+                <li><a href="/art.html">Art</a></li>
                 <li><a href="/work-in-progress.html">Music</a></li>
                 <li><a href="/work-in-progress.html">About</a></li>
                 <li><a href="https://twitter.com/nylescs">Twitter</a></li>
