--- a/art.html
+++ b/art.html
@@ -19,9 +19,9 @@
             Sometimes I make art.
         </p>
         <div class="drawing">   
-            <img style="width: 100%;" src="https://previews.dropbox.com/p/thumb/AA0dsEr7T5npUADrDafK9P1lb323F_a23R4xJcqfsMS0Zw19j0O7UeO3CeItF0_bvlQtpXl6LLNberA6fDTr_mc1ky_fXGqIRdvLQVnk8QxikY1NOl7v8szTYjVcsTNyyx2K_1Z_EP5kR2IlQ49Tb0br0-tXFEXK1hdX_amS5PCNKZ3d2XoQ83mFa1hGQaQsJF9z_RnWOmstMJTwq51zw4cfPmkvUPoH-bANEeFfWw0pW1HLxZozuUdAjWUB08Q4EFjYfaJnCXXHCerTCTVJzbxNi1PrPuDNBUf3NT_bkttPBBstccvzVqX_QQkOBScVFYAyvqWQSURo6RSxQME0LJUSNHmlLhz4GlxfE88FBvBNYQ/p.png?fv_content=true&size_mode=5" alt="2D Digial Drawing of a cartoon strawberry that appears to be candied">
-            <img style="width: 100%;" src="https://previews.dropbox.com/p/thumb/AA2_8OA0l5bFU_KulSdgHbpDtaaH4DjKRoCpeIw2Fh7uv_mL4EqQAXeZwV1enwHU9448JCOf5Jv_5OF7oUVb0SCw9uK3UH-VRv_3WasuViLhfQysFOA-UdjqqnS8-N9d5011lVR258b42jtruJikMrdozjsXNO20L3nc16sG1AD81Xbcg2yqW-x2JCi1RzsTKVb5JePhe47AdGw68XfxnEw5daADMD8PdggVSwdkU1aniYIy11wsKKf5vWxx2E2dNFTZ-QqmLjk_u2fpfh-3HhSNuUreD9u05xiAlcoj1z1Sf9fzP_2vaKDp-Uu6KXrnw88pmbPASg1QDqIpX18L44gqPobkX7WcwVThXi0EFAuaTA/p.png?fv_content=true&size_mode=5" alt="2D Digital Drawing of a carton orange with a red straw into the top">
-            <img style="width: 100%;" src="https://previews.dropbox.com/p/thumb/AA2rWZW6AqUNiRvkbSHhrY3-iLwAikCloZYqoeN8CtsC_9sB7B6nSSdphWZpuSMujeJSddlc0IDCRt1KOp14UeHKwXumTn24pUW-dZFczhe4EjsS8WUFmzMvLUEXzF9DB8L-3i5bZRRJVm688P8NyY1uQZ4GcIg6pdG1yxNcs1Lac4wsSzTAqGmV9JOmIOmbFe5Yos4gB4X44s-kZub8Pdy2z0hNmXA_RhAU_uUulBrtL8M4LyCzCFU5J8-OQwP5AwmoL-4xSZu93ypDSJ1u-utvPgajXJ6ul6cTHpiIuJ_w8mx0i2Z5hadDA3B0C0kP69K71aw8fUI0FCXYg3LoHaDufzkl-5Kug8EpvUKHqBeNTA/p.png?fv_content=true&size_mode=5" alt="2D Digital Drawing of me, a black kid with a large afro wearing a red sweater.">
+            <img style="width: 100%;" src="https://dl.dropboxusercontent.com/s/uvls7wgoy80wbg3/Sweet_Berry.png?dl=0" alt="2D Digial Drawing of a cartoon strawberry that appears to be candied">
+            <img style="width: 100%;" src="https://dl.dropboxusercontent.com/s/s7zfmg45zzc2psf/Orange_Is_The_Can.png?dl=0" alt="2D Digital Drawing of a carton orange with a red straw into the top">
+            <img style="width: 100%;" src="https://dl.dropboxusercontent.com/s/wsg3335j3c7r22s/Faceless%20Portrait.png?dl=0" alt="2D Digital Drawing of me, a black kid with a large afro wearing a red sweater.">
         </div>
     </body>
     <footer>
