--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
         <link rel="stylesheet" type="text/css" href="color.css">
         <title>nyles dot net</title>
-        <link rel="shortcut icon" href="https://previews.dropbox.com/p/thumb/AA2rWZW6AqUNiRvkbSHhrY3-iLwAikCloZYqoeN8CtsC_9sB7B6nSSdphWZpuSMujeJSddlc0IDCRt1KOp14UeHKwXumTn24pUW-dZFczhe4EjsS8WUFmzMvLUEXzF9DB8L-3i5bZRRJVm688P8NyY1uQZ4GcIg6pdG1yxNcs1Lac4wsSzTAqGmV9JOmIOmbFe5Yos4gB4X44s-kZub8Pdy2z0hNmXA_RhAU_uUulBrtL8M4LyCzCFU5J8-OQwP5AwmoL-4xSZu93ypDSJ1u-utvPgajXJ6ul6cTHpiIuJ_w8mx0i2Z5hadDA3B0C0kP69K71aw8fUI0FCXYg3LoHaDufzkl-5Kug8EpvUKHqBeNTA/p.png?fv_content=true&size_mode=5">
+        <link rel="shortcut icon" href="https://dl.dropboxusercontent.com/s/wsg3335j3c7r22s/Faceless%20Portrait.png?dl=0">
     </head>
     <body>
         <div class="top-of-page">
             <div class="head-of-page">
                 <div class="head-picture">
-                    <img class="picture" src="https://previews.dropbox.com/p/thumb/AA2rWZW6AqUNiRvkbSHhrY3-iLwAikCloZYqoeN8CtsC_9sB7B6nSSdphWZpuSMujeJSddlc0IDCRt1KOp14UeHKwXumTn24pUW-dZFczhe4EjsS8WUFmzMvLUEXzF9DB8L-3i5bZRRJVm688P8NyY1uQZ4GcIg6pdG1yxNcs1Lac4wsSzTAqGmV9JOmIOmbFe5Yos4gB4X44s-kZub8Pdy2z0hNmXA_RhAU_uUulBrtL8M4LyCzCFU5J8-OQwP5AwmoL-4xSZu93ypDSJ1u-utvPgajXJ6ul6cTHpiIuJ_w8mx0i2Z5hadDA3B0C0kP69K71aw8fUI0FCXYg3LoHaDufzkl-5Kug8EpvUKHqBeNTA/p.png?fv_content=true&size_mode=5" alt="2D Drawing of me, a black kid with a large afro wearing a red sweater.">
+                    <img class="picture" src="https://dl.dropboxusercontent.com/s/wsg3335j3c7r22s/Faceless%20Portrait.png?dl=0" alt="2D Drawing of me, a black kid with a large afro wearing a red sweater.">
                 </div>
                 <h1>NylesDotNet (now with art)</h1>
             </div>
