--- a/art.html
+++ b/art.html
@@ -21,7 +21,7 @@
         <div class="drawing">   
             <img style="width: 100%;" src="https://dl.dropboxusercontent.com/s/uvls7wgoy80wbg3/Sweet_Berry.png?dl=0" alt="2D Digial Drawing of a cartoon strawberry that appears to be candied">
             <img style="width: 100%;" src="https://dl.dropboxusercontent.com/s/s7zfmg45zzc2psf/Orange_Is_The_Can.png?dl=0" alt="2D Digital Drawing of a carton orange with a red straw into the top">
-            <img style="width: 100%;" src="https://dl.dropboxusercontent.com/s/wsg3335j3c7r22s/Faceless%20Portrait.png?dl=0" alt="2D Digital Drawing of me, a black kid with a large afro wearing a red sweater.">
+            <img style="width: 100%;" src="https://dl.dropboxusercontent.com/s/wsg3335j3c7r22s/Faceless%20Portrait.png?dl=0" alt="2D Digital Drawing of me, a black guy with a large afro wearing a red sweater.">
         </div>
     </body>
     <footer>
