--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="top-of-page">
             <div class="head-of-page">
                 <div class="head-picture">
-                    <img class="picture" src="https://dl.dropboxusercontent.com/s/wsg3335j3c7r22s/Faceless%20Portrait.png?dl=0" alt="2D Drawing of me, a black kid with a large afro wearing a red sweater.">
+                    <img class="picture" src="https://dl.dropboxusercontent.com/s/wsg3335j3c7r22s/Faceless%20Portrait.png?dl=0" alt="2D Drawing of me, a black guy with a large afro wearing a red sweater.">
                 </div>
                 <h1>NylesDotNet (now with art)</h1>
             </div>
@@ -33,12 +33,12 @@
             Do you know me personally?
             <form action="/submit-your-name">
                 <label>
-                    <input value="Yes" type="radio" name="Know" checked>
+                    <input value="Yes" type="radio" name="Know">
                     Yes
                 </label>
             </br>
                 <label>
-                    <input value="No" type="radio" name="Know">
+                    <input value="No" type="radio" name="Know" checked="checked">
                     No
                 </label>
             </br>
