--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
         <link rel="stylesheet" type="text/css" href="color.css">
         <title>nyles dot net</title>
         <link rel="shortcut icon" href="https://dl.dropboxusercontent.com/s/wsg3335j3c7r22s/Faceless%20Portrait.png?dl=0">
+
+        <meta property="og:title" content="nyles dot net"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:image" content="https://dl.dropboxusercontent.com/s/wsg3335j3c7r22s/Faceless%20Portrait.png?dl=0"/>
+        <meta property="og:url" content="www.nyles.net"/>
+        <meta property="og:description" content="Nyles' Network"/>
+        <meta property="og:locale" content="en_US"/>
+        <meta property="og:site_name" content="NylesDotNet"/>
+        <meta property="twitter:card" content="summary_large_image"/>
+
     </head>
     <body>
         <div class="top-of-page">
