--- a/music.html
+++ b/music.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="color.css">
-        <title>nyles.com doesn't exist in my books</title>
+        <title>music opinions</title>
     </head>
     <body>
-        <h1>no free clout</h1>
+        <h1>my thoughts on music</h1>
         <div class="headers">
             <ul>
                 <li><a href="index.html">Home</a></li>
