--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta property="og:description" content="Nyles' Network"/>
         <meta property="og:locale" content="en_US"/>
         <meta property="og:site_name" content="NylesDotNet"/>
-        <meta property="twitter:card" content="summary_large_image"/>
+        <meta property="twitter:card" content="https://dl.dropboxusercontent.com/s/wsg3335j3c7r22s/Faceless%20Portrait.png?dl=0"/>
 
     </head>
     <body>
