--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         <meta property="og:type" content="website"/>
         <meta property="og:image" content="https://dl.dropboxusercontent.com/s/wsg3335j3c7r22s/Faceless%20Portrait.png?dl=0"/>
         <meta property="og:url" content="www.nyles.net"/>
-        <meta property="og:description" content="Nyles' Network"/>
+        <meta property="og:description" content="Nyles' Network. He shares his projects, art, opinions, and other things regularly."/>
         <meta property="og:locale" content="en_US"/>
         <meta property="og:site_name" content="NylesDotNet"/>
-        <meta property="twitter:card" content="https://dl.dropboxusercontent.com/s/wsg3335j3c7r22s/Faceless%20Portrait.png?dl=0"/>
+        <meta property="twitter:card" content="summary_large_image"/>
 
     </head>
     <body>
