--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <meta property="og:locale" content="en_US"/>
         <meta property="og:site_name" content="NylesDotNet"/>
         <meta property="twitter:card" content="summary_large_image"/>
+        <meta property="og:image:width" content="400"/>
+        <meta property="og:image:height" content="300"/>
 
     </head>
     <body>
