Added borders and new message

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                 <div class="head-picture">
                     <img class="picture" src="https://dl.dropboxusercontent.com/s/wsg3335j3c7r22s/Faceless%20Portrait.png?dl=0" alt="2D Drawing of me, a black guy with a large afro wearing a red sweater.">
                 </div>
-                <h1>NylesDotNet (now with art)</h1>
+                <h1>NylesDotNet(now with OpenGraph)</h1>
             </div>
-            <h3 id ="quote-of-the-day">"Was the color orange named after the fruit or was the fruit named after the color?"</h3>
+            <h3 id ="quote-of-the-day">"Alright the joke is, one guy goes to a website."</h3>
         </div>   
-       
+        
         <hr>
         <p><h3>nyles.net because <a href="nyles.com.html">nyles.com</a> was taken.</h3></p>
         <div class="headers">
@@ -38,6 +38,7 @@
                 <li><a href="/work-in-progress.html">Music</a></li>
                 <li><a href="/work-in-progress.html">About</a></li>
                 <li><a href="https://twitter.com/nylescs">Twitter</a></li>
+                <li><a href="https://youtube.com">Youtube</a></li>
             <ul>
         </div>
 <!-- Paragraph that asks the user if they know me asks them to fill in yes or no and then their name-->
