--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="color.css">
+        <script type="text/javascript">
+            var host = "nyles.net";
+            if ((host == window.location.host) && (window.location.protocol != "https:"))
+                window.location.protocol = "https";
+        </script>
+        <link rel="stylesheet" type="text/css" href="color.css"/>
         <title>nyles dot net</title>
-        <link rel="shortcut icon" href="https://dl.dropboxusercontent.com/s/wsg3335j3c7r22s/Faceless%20Portrait.png?dl=0">
-
+        <link rel="shortcut icon" href="https://dl.dropboxusercontent.com/s/wsg3335j3c7r22s/Faceless%20Portrait.png?dl=0"/>
+        <link rel="canonical" href="https://nyles.net"/>
         <meta property="og:title" content="nyles dot net"/>
         <meta property="og:type" content="website"/>
         <meta property="og:image" content="https://dl.dropboxusercontent.com/s/wsg3335j3c7r22s/Faceless%20Portrait.png?dl=0"/>
@@ -23,9 +28,9 @@
                 <div class="head-picture">
                     <img class="picture" src="https://dl.dropboxusercontent.com/s/wsg3335j3c7r22s/Faceless%20Portrait.png?dl=0" alt="2D Drawing of me, a black guy with a large afro wearing a red sweater.">
                 </div>
-                <h1>NylesDotNet(now with OpenGraph)</h1>
+                <h1>NylesDotNet (now with OpenGraph & https)</h1>
             </div>
-            <h3 id ="quote-of-the-day">"Alright the joke is, one guy goes to a website."</h3>
+            <h3 id ="quote-of-the-day">"Security is key, well security has two keys."</h3>
         </div>   
         
         <hr>
