--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <h1>NylesDotNet (now with OpenGraph & https)</h1>
             </div>
-            <h3 id ="quote-of-the-day">"Security is key, well security has two keys."</h3>
+            <h3 id ="quote-of-the-day">"Rain rain come again.. We miss you"</h3>
         </div>   
         
         <hr>
