--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="head-picture">
                     <img class="picture" src="https://dl.dropboxusercontent.com/s/wsg3335j3c7r22s/Faceless%20Portrait.png?dl=0" alt="2D Drawing of me, a black guy with a large afro wearing a red sweater.">
                 </div>
-                <h1>NylesDotNet (now with OpenGraph & https)</h1>
+                <h1>NylesDotNet</h1>
             </div>
             <h3 id ="quote-of-the-day">"Rain rain come again.. We miss you"</h3>
         </div>   
