--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <h1>NylesDotNet</h1>
             </div>
-            <h3 id ="quote-of-the-day">"Rain rain come again.. We miss you"</h3>
+            <h3 id ="quote-of-the-day">"Have you ever had shoes without shoe strings?"</h3>
         </div>   
         
         <hr>
