--- a/index.html
+++ b/index.html
@@ -30,21 +30,23 @@
                 </div>
                 <h1>NylesDotNet</h1>
             </div>
-            <h3 id ="quote-of-the-day">"Have you ever had shoes without shoe strings?"</h3>
+            <h3 id ="quote-of-the-day">"I don't wear the colors of police sirens"</h3>
         </div>   
         
         <hr>
         <p><h3>nyles.net because <a href="nyles.com.html">nyles.com</a> was taken.</h3></p>
         <div class="headers">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="/work-in-progress.html">Things</a></li>
-                <li><a href="/art.html">Art</a></li>
-                <li><a href="/work-in-progress.html">Music</a></li>
-                <li><a href="/work-in-progress.html">About</a></li>
-                <li><a href="https://twitter.com/nylescs">Twitter</a></li>
-                <li><a href="https://youtube.com">Youtube</a></li>
-            <ul>
+            <nav id="navbar">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="/work-in-progress.html">Things</a></li>
+                    <li><a href="/art.html">Art</a></li>
+                    <li><a href="/work-in-progress.html">Music</a></li>
+                    <li><a href="/work-in-progress.html">About</a></li>
+                    <li><a href="https://twitter.com/nylescs">Twitter</a></li>
+                    <li><a href="https://youtube.com">Youtube</a></li>
+                <ul>
+            </nav>
         </div>
 <!-- Paragraph that asks the user if they know me asks them to fill in yes or no and then their name-->
         <p>
