position fixed/absolute testing

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <body>
         <div class="top-of-page">
             <div class="head-of-page">
-                <div class="head-picture">
-                    <img class="picture" src="https://dl.dropboxusercontent.com/s/wsg3335j3c7r22s/Faceless%20Portrait.png?dl=0" alt="2D Drawing of me, a black guy with a large afro wearing a red sweater.">
+                <div class="head-pic">
+                    <img id="head-picture" src="https://dl.dropboxusercontent.com/s/wsg3335j3c7r22s/Faceless%20Portrait.png?dl=0" alt="2D Drawing of me, a black guy with a large afro wearing a red sweater.">
                 </div>
                 <h1>NylesDotNet</h1>
             </div>
