Website Redesign. Changed to %'s

--- a/work-in-progress.html
+++ b/work-in-progress.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="color.css">
+        <link rel="stylesheet" type="text/css" href="work-in-progress.css">
         <title>Work in Progress Page</title>
     </head>
     <body>
