added text; fixed css on nyles.com.html

--- a/nyles.com.html
+++ b/nyles.com.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="color.css">
+        <link rel="stylesheet" type="text/css" href="work-in-progress.css">
         <title>nyles.com doesn't exist in my books</title>
     </head>
     <body>
