about page half joke

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 Welcome to my network! My name is Nyles and I plan to use this website to host many of the projects that I work on including this one. 
                 I'm not sure what to put on the site at the moment, but so far I have uploaded some of my art for visitors to see.
                 This website is a living breathing project (Taken directly from Kanye). So expect to never see the exact same website if you frequently revisit day by day.
-                This is my first attempt at making a website. Clicking on most of the links will redirect you to an incomplete page.
+                This is my first attempt at making a website. Clicking on most of the links will redirect you to an incomplete page. Ironically my short bio below should be on the About page
             </p>
             <p>
                 I will try to update the quote (second box) every day
