--- a/art.html
+++ b/art.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="color.css">
+        <link rel="stylesheet" type="text/css" href="home.css">
         <title>I make art sometimes</title>
     </head>
     <body><h1>Art Gallery</h1>
