--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <div id="quote">
                 <h4>
-                   Mamba Mentality Everyday
+                   Mr Telephone Man!
                 </h4>
             </div>
         </div>   
