--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <div id="quote">
                 <h4>
-                   Mr Telephone Man!
+                    The Juice is temporary. The sauce is forever.
                 </h4>
             </div>
         </div>   
@@ -76,7 +76,7 @@
     </body>
     <footer>
         <div class="footer-content">
-            Nyles.net created by Nyles, Last Updated 07/05/2020
+            Nyles.net created by Nyles, Last Updated 07/12/2020
             <br>
             © Nyles.net 2020 
         </div>
