--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             <div id="quote">
                 <h4>
-                    The juice is temporary; The sauce is forever.
+                    Deep in my bag like the fries are at the bottom.
                 </h4>
             </div>
         </div>   
