--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <meta property="og:type" content="website"/>
         <meta property="og:image" content="https://dl.dropboxusercontent.com/s/wsg3335j3c7r22s/Faceless%20Portrait.png?dl=0"/>
         <meta property="og:url" content="www.nyles.net"/>
-        <meta property="og:description" content="Nyles' Network. He shares his projects, art, opinions, and other things regularly."/>
+        <meta property="og:description" content="Nyles' Network. He shares his projects, art, opinions, and other things intermittently."/>
         <meta property="og:locale" content="en_US"/>
         <meta property="og:site_name" content="NylesDotNet"/>
         <meta property="twitter:card" content="summary_large_image"/>
@@ -32,7 +32,7 @@
             </div>
             <div id="quote">
                 <h4>
-                    Deep in my bag like the fries are at the bottom.
+                    Hooligans
                 </h4>
             </div>
         </div>   
@@ -53,32 +53,29 @@
         <h3>nyles.net because <a id="nyles-com" href="nyles.com.html">nyles.com</a> was taken.</h3>
         <div class="short-summary">
             <p>
-                Welcome to my network! My name is Nyles and I plan to use this website to host many of the projects that I work on including this one. 
-                I'm not sure what to put on the site at the moment, but so far I have uploaded some of my art for visitors to see.
-                This website is a living breathing project (Taken directly from Kanye). So expect to never see the exact same website if you frequently revisit day by day.
-                This is my first attempt at making a website. Clicking on most of the links will redirect you to an incomplete page. Ironically my short bio below should be on the About page
+                This is a website for me to test new ideas and also trying my hand at web design.
             </p>
             <p>
-                I will try to update the quote (second box) every day
-                with anything I rediscover or think of.
+                The second box serves as a place for me to put any quotes I take interest to.
             </p>
         </div>
         <div class="bio">
             <p>
-                Short Bio: I am a Computer Science student studying at a local community college. At the moment I am taking a summer Calculus II course. 
-                I hope to one day turn my knowledge of programming into a project that can be enjoy by thousands if not millions. Right now I am not entirely sure what I want to do exactly
-                though I've decided to use this website as a start. I am primarily learning how to create a websiteon <a href="https://freecodecamp.org" target="_blank">freeCodeCamp.org</a>
-                 at the moment I am still learning responsive web design (not that it was hard to tell) In school I am learning how to code in C++ 
-                 though I am excited to work with JavaScript to bring this website together
+                My name is Nyles, I am currently listening to:
+                <ul>
+                    <li><a href="https://www.youtube.com/watch?v=UOrv5ZSbTIY">Baby Keem</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=a5JCltuobqQ">Tyler, The Creator</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=4_yRYscHLWc">Childish Gambino</a></li>
+                </ul>
             </p>
         </div>
         
     </body>
     <footer>
         <div class="footer-content">
-            Nyles.net created by Nyles, Last Updated 07/12/2020
+            Nyles.net created by Nyles, Last Updated 07/08/2021
             <br>
-            © Nyles.net 2020 
+            © Nyles.net 2020-21 
         </div>
        
     </footer>
