updated short summary
included source of learning

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
         <div class="short-summary">
             <p>
                 This is a website for me to test new ideas and also trying my hand at web design.
+                I am primarily learning how to create a website via <a href="https://freecodecamp.org" target="_blank">freeCodeCamp.org</a>.
+                Essentially self-taught. I will come back to this project at a later date. A huge work-in-progress
             </p>
             <p>
                 The second box serves as a place for me to put any quotes I take interest to.
