--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="top-of-page">
             <div class="head-of-page">
                 <div class="head-picture">
-                    <img class="picture" src="https://dl.dropboxusercontent.com/s/wsg3335j3c7r22s/Faceless%20Portrait.png?dl=0" alt="2D Drawing of me, a black guy with a large afro wearing a red sweater.">
+                    <img class="picture" src="https://dl.dropboxusercontent.com/s/wsg3335j3c7r22s/Faceless%20Portrait.png?dl=0" alt="2D Drawing of Nyles">
                 </div>
                 <h1>NylesDotNet</h1>
             </div>
