--- a/nyles.com.html
+++ b/nyles.com.html
@@ -13,7 +13,7 @@
                 <li><a href="/art.html">Art</a></li>
                 <li><a href="/music.html">Music</a></li>
                 <li><a href="/work-in-progress.html">About</a></li>
-                <li><a href="https://twitter.com/nylescs">Twitter</a></li>
+                <li><a href="https://twitter.com/">Twitter</a></li>
             <ul>
         </div>
     </body>
