--- a/music.html
+++ b/music.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="color.css">
+        <link rel="stylesheet" type="text/css" href="music.css">
         <title>music opinions</title>
     </head>
     <body>
@@ -13,8 +13,19 @@
                 <li><a href="/art.html">Art</a></li>
                 <li><a href="/music.html">Music</a></li>
                 <li><a href="/work-in-progress.html">About</a></li>
-                <li><a href="https://twitter.com/nylescs">Twitter</a></li>
-            <ul>
+                <li><a href="https://twitter.com/">Twitter</a></li>
+                <ul>
+        </div>
+        <div class="favorites">
+            <p>
+                I am currently listening to:
+                <ul>
+                    <li><a href="https://www.youtube.com/watch?v=UOrv5ZSbTIY">Baby Keem</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=a5JCltuobqQ">Tyler, The Creator</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=4_yRYscHLWc">Childish Gambino</a></li>
+                </ul>
+            </p>
         </div>
     </body>
+
 </html>
