--- a/art.html
+++ b/art.html
@@ -12,7 +12,7 @@
                 <li><a href="/art.html">Art</a></li>
                 <li><a href="/work-in-progress.html">Music</a></li>
                 <li><a href="/work-in-progress.html">About</a></li>
-                <li><a href="https://twitter.com/nylescs">Twitter</a></li>
+                <li><a href="https://twitter.com/">Twitter</a></li>
             <ul>
         </div>
         <p style="text-align: center;">
