--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
             <h1>NylesDotNet</h1>
         </div>
-        <div id="quote">
+        <div id="home-quote">
             <!-- THIS IS WHERE THE QUOTE IS UPDATED. -->
             <h4>
                 Hooligans
@@ -40,7 +40,7 @@
 
     <hr>
     <div class="headers">
-        <nav id="navbar">
+        <nav id="nav-bar">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="/work-in-progress.html">Things</a></li>
@@ -51,21 +51,21 @@
                 <ul>
         </nav>
     </div>
-    <div class="appdrawer">
-        <nav id="app">
+    <div class="app-drawer">
+        <nav>
             <li><a href="/paycalc.html">Pay Calculator</a></li>
             <li>Stick Project</li>
             <li>Random</li>
         </nav>
     </div>
     <h3>nyles.net because <a id="nyles-com" href="nyles.com.html">nyles.com</a> was taken.</h3>
-    <div class="short-summary">
-        <p>
+    <div class="summary">
+        <p id="first-summary">
             This is a website for me to test new ideas and also trying my hand at web design.
             I am primarily learning how to create a website via <a href="https://freecodecamp.org" target="_blank">freeCodeCamp.org</a>.
             Essentially self-taught. I will come back to this project at a later date. A huge work-in-progress
         </p>
-        <p>
+        <p id="text-box">
             This box is here primarily to test out a layout of my website.
         </p>
     </div>
@@ -84,11 +84,9 @@
 </html>
 <footer>
     <div class="footer-content">
-        Nyles.net created by Nyles 01-01-20
-        <br>
-        Last Updated 07/08/2021
-        <br>
-        © Nyles.net 2020-22
+        <p>Created by Nyles 06-28-20</p>
+        <p>Last Updated 05/23/2022</p>
+        <p>© Nyles.net 2020-22</p>
     </div>
 
 </footer>
