--- a/nyles.com.html
+++ b/nyles.com.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="work-in-progress.css">
-        <title>nyles.com doesn't exist in my books</title>
+        <link rel="stylesheet" type="text/css" href="nyles-com.css">
+        <title>fake website</title>
     </head>
     <body>
-        <h1>no free clout</h1>
-        <div class="headers">
+        <h1>nyles.net sounds cooler anyways</h1>
+        <!-- <div class="headers">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="/work-in-progress.html">Things</a></li>
@@ -15,6 +15,11 @@
                 <li><a href="/work-in-progress.html">About</a></li>
                 <li><a href="https://twitter.com/">Twitter</a></li>
             <ul>
-        </div>
+        </div> -->
+        <br>
+        <h1 id="message">can't support the opposition</h1>
+        <p id="return-home">
+            <a href="index.html">Return Home.</a>
+        </p>
     </body>
 </html>
