--- a/index.html
+++ b/index.html
@@ -30,35 +30,23 @@
             </div>
             <h1>NylesDotNet</h1>
         </div>
-        <div id="home-quote">
-            <!-- THIS IS WHERE THE QUOTE IS UPDATED. -->
-            <h4>
-                Hooligans
-            </h4>
-        </div>
     </div>
 
-    <hr>
     <div class="headers">
         <nav id="nav-bar">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="/work-in-progress.html">Things</a></li>
                 <li><a href="/art.html">Art</a></li>
-                <li><a href="music.html">Music</a></li>
-                <li><a href="/work-in-progress.html">About</a></li>
                 <li><a href="/paycalc.html">Pay Calculator</a></li>
+                <li><a href="/work-in-progress.html">About</a></li>
                 <ul>
         </nav>
     </div>
-    <div class="app-drawer">
-        <nav>
-            <li><a href="/paycalc.html">Pay Calculator</a></li>
-            <li>Stick Project</li>
-            <li>Random</li>
-        </nav>
+    <div id="home-quote">
+        <!-- THIS IS WHERE THE QUOTE IS UPDATED. -->
+        <h4 class="quote">"Happy Birthday"</h4>
     </div>
-    <h3>nyles.net because <a id="nyles-com" href="nyles.com.html">nyles.com</a> was taken.</h3>
     <div class="summary">
         <p id="first-summary">
             This is a website for me to test new ideas and also trying my hand at web design.
@@ -73,20 +61,21 @@
         <p>
             I am currently listening to:
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=UOrv5ZSbTIY">Baby Keem</a></li>
-                <li><a href="https://www.youtube.com/watch?v=a5JCltuobqQ">Tyler, The Creator</a></li>
-                <li><a href="https://www.youtube.com/watch?v=4_yRYscHLWc">Childish Gambino</a></li>
+                <li><a href="https://www.youtube.com/watch?v=UOrv5ZSbTIY" target="blank_">Baby Keem</a></li>
+                <li><a href="https://www.youtube.com/watch?v=4_yRYscHLWc" target="blank_">Childish Gambino</a></li>
+                <li><a href="https://www.youtube.com/watch?v=a5JCltuobqQ" target="blank_">Tyler, The Creator</a></li>
+                <li><a href="https://www.youtube.com/watch?v=hl3-ZPg-JAA" target="blank_">Kendrick Lamar</a></li>
             </ul>
         </p>
     </div>
+
 
 </body>
 </html>
 <footer>
     <div class="footer-content">
-        <p>Created by Nyles 06-28-20</p>
-        <p>Last Updated 05/23/2022</p>
-        <p>© Nyles.net 2020-22</p>
+        <p>Created by Nyles 06-28-20</p><p>Last Updated 05/25/2022</p><p>© Nyles.net 2020-22</p>
     </div>
+    <h3 id="nyles-com">nyles.net because <a href="nyles.com.html">nyles.com</a> was taken.</h3>
 
 </footer>
