--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
 </html>
 <footer>
     <div class="footer-content">
-        <p>Created by Nyles 06-28-20</p><p>Last Updated 05/25/2022</p><p>© Nyles.net 2020-22</p>
+        <!-- <p>Created by Nyles 06-28-20</p>
+        <p>Last Updated 05/25/2022</p> -->
+        <p>© Nyles.net 2020-22</p>
     </div>
     <h3 id="nyles-com">nyles.net because <a href="nyles.com.html">nyles.com</a> was taken.</h3>
 
