changed cultural adaptation section

--- a/index.html
+++ b/index.html
@@ -69,16 +69,24 @@
                 Humans use clothing as a cultural adaptation to various climates. For instance, the Inuit people use fur clothing to insulate against the cold, while desert-dwelling cultures often wear loose, light-colored clothing to reflect sunlight and aid cooling.
             </p>
             <img class ="cultural-picture" src="https://www.dropbox.com/s/dcwfkbut424ur10/morocco%20traditional%20clothing.jpg?raw=1" alt="Image description">
-            <h3>Shelter</h3>
+            <h3>UV Radiation</h3>
             <p>
-                Shelter is another way humans adapt culturally. People in colder regions might build insulated homes with heating systems, while those in hot, dry climates often build houses with natural cooling designs, using materials that help to regulate temperature.
+                Parallel to the genetic adaptations to UV radiation, humans have also developed cultural adaptations, 
+                such as the invention and use of sunscreen. Acting as a shield, sunscreen provides SPF protection that helps 
+                block harmful UV radiation. This not only prevents painful sunburns, but also significantly reduces the risk of skin 
+                conditions like premature aging and skin cancer. 
             </p>
-            <img class ="cultural-picture" src="path/to/image.jpg" alt="Image description">
-            <h3>Tools</h3>
+            <img class ="cultural-picture" src="https://www.dropbox.com/s/xmhx2gua43h2v6f/sunscreen.jpg?raw=1" alt="Image description">
+            <h3>Transportation</h3>
             <p>
-                Humans have been using tools for hundreds of thousands of years to adapt to their environments. This ranges from the use of fire and simple stone tools by our early ancestors to the complex technological innovations we see today.
+                Unlike many other species, humans have developed a wide range of transportation methods 
+                tailored to the unique environments in which they live. In regions characterized by large bodies 
+                of water or intricate canal systems, boats become a vital means of travel. Conversely, 
+                in densely populated urban areas like San Francisco, public transit systems such as buses and trams are a common sight,
+                 efficiently carrying people through bustling city streets. The diversity in transportation methods that humans have created is a testament to our
+                 ingenuity and ability to adapt to the many challenges posed by different environments. 
             </p>
-            <img src="path/to/image.jpg" alt="Image description">
+            <img class ="cultural-picture" src="https://www.dropbox.com/s/5fsb567icorp8dn/bus.jpg?raw=1" alt="Image description">
         </div>
     </div>
         <div class="quote-box">
