adds cultural adaptation intro

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     
     <div class="cultural-adaptation-details">
         <h1 class="adaptation-header">Cultural Adaptations</h1>
-        <p>
-            Culturual adaptations are unique to humans. 
+        <p class="cultural-adaptation-intro">
+            Cultural adaptations, unlike genetic adaptations, are unique to only humans and are how humans respond to their environment non-physiologically. These adaptations are not rooted in our DNA, but rather in shared knowledge, beliefs, and behaviors. Cultural adaptations can significantly enhance survival and reproduction, much like their genetic counterparts. However, in contrast to genetic changes, cultural adaptations can be deliberately implemented, can occur within a single generation, and are reversible or modifiable over time. 
         </p>
         <div class="cultural-adaptation-examples">
             <h3>Clothing</h3>
@@ -94,5 +94,3 @@
             <p class="darwin">- Charles Darwin, Father of Evolution</p>
         </div>
 </body>
-        
-   
